intTests/test_type_errors/unify002.log.good
Loading file "unify002.saw"
Type errors:
  unify002.saw:7:13-7:18: Error: Type mismatch.
    Expected: Int
    Found:    String

  unify002.saw:7:10-7:11: Note: The type Int arises from the type of this term
  unify002.saw:7:13-7:18: Note: The type String arises from the type of this term

  unify002.saw:7:23-7:27: Unbound variable: "True"

FAILED
